5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1643_2445.log
== TEST (2019-04-15 17:59:13) 
-- CODE:
a=hcjhjgdsugui
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=hcjhjgdsugui
NameError: name 'hcjhjgdsugui' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:16:49) 
-- CODE:
Escola= input()
Valor= float(input())
C= (5/9)*(Valor-32)
Celsus=round(c,2)
f=((9/5)*Valor)+32
Fara=round(f,2)
if(Escala=='C'):
	print(Far치)
else(Escola=='f') :
	print(Celsus) 
-- EXECUTION TIME:
0.117301
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 9
    else(Escola=='f') :
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:17:31) 
-- CODE:
Escala= input()
Valor= float(input())
C= (5/9)*(Valor-32)
Celsus=round(c,2)
f=((9/5)*Valor)+32
Fara=round(f,2)
if(Escala=='C'):
	print(Far치)
else(Escola=='f') :
	print(Celsus) 
-- EXECUTION TIME:
0.118147
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 9
    else(Escola=='f') :
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:18:15) 
-- CODE:
Escala= input()
Valor= float(input())
C= (5/9)*(Valor-32)
Celsus=round(C, 2)
f=((9/5)*Valor)+32
Fara=round(f,2)
if(Escala=='C'):
	print(Far치)
else(Escola=='f') :
	print(Celsus) 
-- EXECUTION TIME:
0.143841
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 9
    else(Escola=='f') :
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:18:48) 
-- CODE:
Escala= input()
Valor= float(input())
C= (5/9)*(Valor-32)
Celsus=round(C, 2)
f=((9/5)*Valor)+32
Fara=round(f,2)
if(Escala=='C'):
	print(Far치)
else(Escala=='f') :
	print(Celsus) 
-- EXECUTION TIME:
0.15465
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 9
    else(Escala=='f') :
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:19:37) 
-- CODE:
Escala= input()
Valor= float(input())
C= (5/9)*(Valor-32)
Celsus=round(C, 2)
f=((9/5)*Valor)+32
Fara=round(f,2)
if(Escala=='C'):
	print(Fara)
else(Escala=='f') :
	print(Celsus) 
-- EXECUTION TIME:
0.173782
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 9
    else(Escala=='f') :
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:20:33) 
-- CODE:
Escala= input()
Valor= float(input())
C= (5/9)*(Valor-32)
Celsus=round(C, 2)
f=((9/5)*Valor)+32
Fara=round(f,2)
if(Escala=='C'):
	print(Fara)
else(Escala=='f'):
	print(Celsus) 
-- EXECUTION TIME:
0.169234
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 9
    else(Escala=='f'):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:36:02) 
-- CODE:
Escala= input()
Valor= float(input())
C= (5/9)*(Valor-32)
Celsus=round(C, 2)
f=((9/5)*Valor)+32
Fara=round(f,2)
if(Escala=='C'):
	print(Fara)
else(Escala=='f'):
	print(Celsus) 
-- EXECUTION TIME:
0.14856
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 9
    else(Escala=='f'):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:47:08) 
-- CODE:
escala=input(" ")
valor=float(input(" "))
if escala.upper()=="F":
	mensagem=5/9*(valor-32)
	
else:
	mensagem=(9/5*valor)+32
print(round(mensagem, 2))
-- EXECUTION TIME:
0.206275
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
